--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "3.0.1"
   },
   "dependencies": {
+    "navi": "^0.12.7",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-navi": "^0.12.7"
   },
   "scripts": {
     "start": "react-scripts start",
