--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "react-scripts": "3.0.1"
   },
   "dependencies": {
-    "navi": "^0.12.7",
+    "@reach/router": "^1.2.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-navi": "^0.12.7"
+    "react-icons": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
